Fix menu on mobile

--- a/src/@lekoarts/gatsby-theme-cara/components/menu.css
+++ b/src/@lekoarts/gatsby-theme-cara/components/menu.css
@@ -1,9 +1,11 @@
 .menu {
+  left: 0;
   list-style: none;
   margin: 10px;
+  padding: 0;
   position: fixed;
   right: 0;
-  text-align: right;
+  text-align: center;
   top: 0;
   z-index: 1;
 }
@@ -37,4 +39,10 @@
 .menu button:hover,
 .menu .btn:hover {
   box-shadow: 0 0 13px -1px black;
+}
+
+@media screen and (min-width: 800px) {
+  .menu {
+    text-align: right;
+  }
 }
